--- a/css/output.css
+++ b/css/output.css
@@ -91,7 +91,7 @@ body {
 }
 .tic-tac-table .tic-tac-cell {
   @apply border border-content w-[33%] font-bold text-2xl relative aspect-square rounded;
-  @apply transition-transform delay-75;
+  @apply transition-all delay-75;
 }
 .tic-tac-table .tic-tac-cell.type-O {
   @apply cursor-not-allowed;
@@ -103,6 +103,24 @@ body {
 .tic-tac-table .tic-tac-cell.type-X.stop-animate-move-x {
   transform: rotate3d(0, 0, 0, 0deg);
 }
+.tic-tac-table .tic-tac-cell.type-X.type-Success {
+  transform: rotate3d(0, 0, 0, 0deg) scale(110%);
+}
+.tic-tac-table .tic-tac-cell.type-X.type-Success.stop-animate-move-success {
+  transform: rotate3d(0, 0, 0, 0deg) scale(100%);
+}
+.tic-tac-table .tic-tac-cell.type-X.type-Success.stop-animate-move-success .tic-tac-cell-value {
+  @apply text-6xl;
+}
+.tic-tac-table .tic-tac-cell.type-X.type-Success.stop-animate-move-x {
+  transform: rotate3d(0, 0, 0, 0deg) scale(110%);
+}
+.tic-tac-table .tic-tac-cell.type-X.type-Success.stop-animate-move-x.stop-animate-move-success {
+  transform: rotate3d(0, 0, 0, 0deg) scale(100%);
+}
+.tic-tac-table .tic-tac-cell.type-X.type-Success.stop-animate-move-x.stop-animate-move-success .tic-tac-cell-value {
+  @apply text-6xl;
+}
 .tic-tac-table .tic-tac-cell.type-Disabled {
   @apply cursor-not-allowed;
 }
@@ -110,13 +128,18 @@ body {
   @apply bg-red-300 text-red-600;
 }
 .tic-tac-table .tic-tac-cell.type-Success {
-  @apply bg-green-300 text-white scale-110 origin-center;
+  @apply bg-green-300 text-white scale-110;
 }
 .tic-tac-table .tic-tac-cell.type-Success.stop-animate-move-success {
   @apply scale-100;
 }
+.tic-tac-table .tic-tac-cell.type-Success.stop-animate-move-success .tic-tac-cell-value {
+  @apply text-6xl;
+}
 .tic-tac-table .tic-tac-cell .tic-tac-cell-span {
   @apply absolute top-2 right-2 text-xs text-white hidden;
+  @apply delay-75;
+  transition: font-size;
 }
 .tic-tac-table .tic-tac-cell .tic-tac-cell-value {
   @apply flex justify-center items-center w-full h-full text-3xl;
