--- a/css/tailwind-style.css
+++ b/css/tailwind-style.css
@@ -600,13 +600,13 @@ body[data-theme=dark] {
 
 @media (min-width: 768px) {
   .tic-tac-width {
-    width: 50%;
+    width: 60%;
   }
 }
 
 @media (min-width: 1024px) {
   .tic-tac-width {
-    max-width: 30vw;
+    max-width: 40rem;
   }
 }
 
@@ -706,6 +706,10 @@ body[data-theme=dark] {
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .items-center {
   align-items: center;
 }
@@ -714,8 +718,8 @@ body[data-theme=dark] {
   justify-content: center;
 }
 
-.justify-between {
-  justify-content: space-between;
+.gap-4 {
+  gap: 1rem;
 }
 
 .rounded {
@@ -763,6 +767,10 @@ body[data-theme=dark] {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .text-2xl {
@@ -909,30 +917,67 @@ body {
 
 @media (min-width: 768px) {
   .wrapper-div .info-tab {
-    width: 50%;
+    width: 60%;
   }
 }
 
 @media (min-width: 1024px) {
   .wrapper-div .info-tab {
-    max-width: 30vw;
+    max-width: 40rem;
   }
 }
 
 .wrapper-div .info-tab {
   display: flex;
   min-height: 2.5rem;
+  flex-wrap: wrap;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+}
+
+@media (min-width: 768px) {
+  .wrapper-div .info-tab {
+    flex-wrap: nowrap;
+  }
+}
+
+.wrapper-div .info-tab {
+  gap: 1rem;
+}
+
+@media (min-width: 768px) {
+  .wrapper-div .info-tab {
+    justify-content: space-between;
+  }
 }
 
 .wrapper-div .info-tab .info-p {
   font-weight: 600;
+  width: 100%;
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  .wrapper-div .info-tab .info-p {
+    width: -moz-fit-content;
+    width: fit-content;
+    text-align: left;
+  }
 }
 
 .wrapper-div .info-tab .winner-found {
   --tw-text-opacity: 1;
   color: rgb(147 197 253 / var(--tw-text-opacity, 1));
+  width: 100%;
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  .wrapper-div .info-tab .winner-found {
+    width: -moz-fit-content;
+    width: fit-content;
+    text-align: left;
+  }
 }
 
 .wrapper-div .info-tab .winner-found.you-lost {
@@ -951,13 +996,13 @@ body {
 
 @media (min-width: 768px) {
   .tic-tac-table {
-    width: 50%;
+    width: 60%;
   }
 }
 
 @media (min-width: 1024px) {
   .tic-tac-table {
-    max-width: 30vw;
+    max-width: 40rem;
   }
 }
 
@@ -1235,18 +1280,27 @@ body {
 }
 
 @media (min-width: 768px) {
-  .md\:w-\[50\%\] {
-    width: 50%;
+  .md\:w-\[60\%\] {
+    width: 60%;
+  }
+
+  .md\:w-fit {
+    width: -moz-fit-content;
+    width: fit-content;
   }
 
   .md\:flex-row {
     flex-direction: row;
   }
+
+  .md\:flex-nowrap {
+    flex-wrap: nowrap;
+  }
 }
 
 @media (min-width: 1024px) {
-  .lg\:max-w-\[30vw\] {
-    max-width: 30vw;
+  .lg\:max-w-\[40rem\] {
+    max-width: 40rem;
   }
 }
 
