--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -9,8 +9,7 @@
 }
 
 body {
-  @apply bg-bkg text-bkg;
-  @apply text-4xl;
+  @apply bg-bkg text-content;
 }
 
 
@@ -87,7 +86,7 @@ body {
     @apply flex w-full gap-4;
   }
   .tic-tac-cell {
-    @apply border border-content w-[33%] font-bold text-2xl relative aspect-square rounded cursor-pointer;
+    @apply border border-content w-[33%] font-bold relative aspect-square rounded cursor-pointer text-3xl lg:text-5xl;
     @apply transition-all delay-75;
 
     &.type-O{
@@ -109,7 +108,7 @@ body {
           transform: rotate3d(0,0,0,0deg) scale(100%);
 
           .tic-tac-cell-value{
-            @apply text-6xl;
+            @apply text-8xl;
           }
 
         }
@@ -121,7 +120,7 @@ body {
             transform: rotate3d(0,0,0,0deg) scale(100%);
 
             .tic-tac-cell-value{
-              @apply text-6xl;
+              @apply text-6xl lg:text-8xl;
             }
 
           }
@@ -146,7 +145,7 @@ body {
         @apply scale-100;
 
         .tic-tac-cell-value{
-          @apply text-6xl;
+          @apply text-6xl lg:text-8xl;
         }
 
       }
@@ -159,7 +158,7 @@ body {
     }
 
     .tic-tac-cell-value{
-      @apply flex justify-center items-center w-full h-full text-3xl;
+      @apply flex justify-center items-center w-full h-full;
     }
 
 
