--- a/app/css/components/loading/_loading.scss
+++ b/app/css/components/loading/_loading.scss
@@ -2,10 +2,13 @@
   @apply fixed top-0 left-0 right-0 bottom-0 bg-content bg-opacity-60 text-bkg z-50 ;
   @apply flex justify-center items-center;
   .loading-wrapper-child{
-    @apply w-fit flex justify-center;
+    @apply w-fit flex flex-col justify-center items-center gap-4 md:gap-8;
     .loading-text{
-      @apply text-8xl text-bkg;
+      @apply text-4xl md:text-8xl text-bkg;
       animation-duration: 2s;
+    }
+    .loading-info-text{
+      @apply text-sm sm:text-base md:text-2xl text-bkg;
     }
   }
 }
