--- a/apps/web/app/css/style.scss
+++ b/apps/web/app/css/style.scss
@@ -78,7 +78,7 @@ body {
   @apply w-full flex flex-col items-center gap-8;
 
   .info-tab {
-    @apply absolute top-14 left-0 w-full;
+    @apply absolute top-16 left-0 w-full px-8 md:px-0;
     @apply md:static md:tic-tac-width;
     @apply flex-wrap justify-center md:flex-nowrap flex items-center min-h-[2.5rem];
     @apply gap-4 md:justify-between;
@@ -231,4 +231,8 @@ body {
       }
     }
   }
+}
+
+.loading-room{
+   @apply px-8;
 }
