--- a/apps/web/app/css/pages/_opponent-selection.scss
+++ b/apps/web/app/css/pages/_opponent-selection.scss
@@ -5,3 +5,15 @@
 .player-selection-form {
   @apply items-center;
 }
+
+.remote-random-restart-display {
+  @apply flex justify-center items-center;
+
+  .buttons-wrapper {
+    @apply flex flex-col gap-4;
+
+    button {
+      @apply text-center justify-center;
+    }
+  }
+}
